fix security authorization

--- a/src/main/resources/templates/registration-otp.html
+++ b/src/main/resources/templates/registration-otp.html
@@ -80,7 +80,7 @@
 <div class="container">
     <div class="logo">
 <!--        <img src="logo.png" style="display: block; font-size: 14px; width: 25px; height: 25px;">-->
-        <h1>Toby.me</h1>
+        <h1>NTA-Bookstore</h1>
     </div>
     <h4 class="title">Yêu cầu xác thực tài khoản</h4>
     <p>Xin chào,</p>
